# ADEPT

./: .gitignore  .gitmodules  README.md
CONTROL/Car Remote Control/Car Remote Control/Properties/: AssemblyInfo.cs
CONTROL/Car Server/: main.py
CONTROL/racecar/racecar/config/racecar-v2/: auto_teleop.yaml
CONTROL/racecar/racecar/launch/: mux.launch
CONTROL/racecar/racecar/launch/includes/: autonomous-teleop.launch.xml
CONTROL/remote_control/include/: backward.h  carstate.h
CONTROL/remote_control/launch/: cloud.launch
CONTROL/remote_control/src/: left.cpp
Car Remote Control/: Car Remote Control.sln
Car Remote Control/Car Remote Control/: Car Remote Control.csproj  Game1.cs
Car Server/: main.py
MOTIONPLANNING/basic_motion_planner/: README.md
PERCEPTION/darknet_ros/darknet/: .gitignore
PERCEPTION/detector/: blue-from-tiny-voc_1000.weights.REMOVED.git-id  blue_train.txt
basic_motion_planner/: CMakeLists.txt  package.xml
basic_motion_planner/include/basic_motion_planner/: basic_motion_planner.h  laserscan_to_pointcloud.h  motion_computer.h
basic_motion_planner/launch/: basic_motion_planner.launch  launch.launch  rosbag.launch
basic_motion_planner/rviz/: bmp.rviz
basic_motion_planner/src/: basic_motion_planner.cpp  laserscan_to_pointcloud.cpp  motion_computer.cpp
cone_detector/: CMakeLists.txt
darknet_ros/darknet/: .gitignore
darknet_ros/darknet_ros/config/: blue.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch
detector/: blue.names
launch/: README.md  laser_filter.launch
racecar/racecar/config/racecar-v2/: auto_teleop.yaml  vesc.yaml
racecar/racecar/launch/includes/: racecar-v2-teleop.launch.xml
racecar/racecar/launch/includes/common/: auto_teleop.launch.xml
racecar/racecar/rviz/: all_sensors.rviz
remote_control/: CMakeLists.txt
remote_control/include/: avoid.h  backward.h  carstate.h  forward.h  idle.h  left.h  leftbackward.h  leftforward.h  right.h  rightbackward.h  rightforward.h
remote_control/include/remote_control/: carstate.h
remote_control/src/: avoid.cpp  backward.cpp  caratate.cpp  carstate.cpp  forward.cpp  idle.cpp  left.cpp  leftbackward.cpp  leftforward.cpp  right.cpp  rightbackward.cpp  rightforward.cpp  talker.cpp
rplidar/: CMakeLists.txt  package.xml
rplidar_ros/launch/: hectormapping.launch
rviz/: sensors.rviz
src/CONTROL/Car Remote Control/Car Remote Control/: Program.cs  app.manifest
src/CONTROL/racecar/racecar/launch/: all_sensors.launch  auto_teleop.launch
src/CONTROL/remote_control/: package.xml
src/CONTROL/remote_control/include/: path.h
src/CONTROL/remote_control/src/: backward.cpp  carstate.cpp  forward.cpp  leftbackward.cpp  path.cpp  rightbackward.cpp  talker.cpp
src/LOCALIZATION/rplidar_ros/launch/: hectormapping.launch
src/MOTIONPLANNING/basic_motion_planner/: package.xml
src/MOTIONPLANNING/basic_motion_planner/rosbags/: cone_track_slow.bag.REMOVED.git-id
src/MOTIONPLANNING/basic_motion_planner/src/: basic_motion_planner.cpp  motion_computer.cpp
src/PERCEPTION/detector/: blue.data  blue_test.txt
src/car_setup/: README.md  laser_filter_def.yaml  static_transforms.launch
src/fakeLaserScan/: CMakeLists.txt  README.md  package.xml
src/fakeLaserScan/launch/: fakeLaserScan.launch
src/fakeLaserScan/src/: fakeLaserScan.cpp
tools/: initWorkspace.sh  installAll.sh  installROS.sh  installRos.sh  install_CUDA.sh  install_RTIMUlib.sh  install_ZEDSDK.sh  install_all.sh  setSource.sh  setupAdept.sh  setupROS.sh
(+6 files in other folders)
